--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   "homepage": "http://opus4.kobv.de",
   "extra": {
     "branch-alias": {
-      "dev-master": "4.7-dev"
+      "dev-master": "4.7.x-dev"
     }
   }
 }
