--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,38 @@
 {
   "name": "opus4-repo/search",
-  "description": "Solr configuration for Opus 4",
+  "description": "OPUS 4 search implementation based on Solr.",
   "license": "GPL-2.0+",
   "type": "library",
   "keywords": [
     "opus4",
     "solr"
   ],
-  "homepage": "http://www.opus-repository.org"
+  "homepage": "http://www.opus-repository.org",
+  "require": {
+    "solarium/solarium": "3.8.*",
+    "opus4-repo/framework": "4.7.x-dev"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "4.8.24"
+  },
+  "autoload": {
+    "psr-4": {
+      "Opus\\Search\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "OpusTest\\Search\\": "test/"
+    }
+  },
+  "scripts": {
+    "check": [
+      "@cs-check",
+      "@test"
+    ],
+    "test": "phpunit --colors=always",
+    "test-coverage": "phpunit --colors=always --coverage-clover build/clover.xml",
+    "cs-check": "phpcs",
+    "cs-fix": "phpcbf"
+  }
 }
