--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
   "homepage": "http://www.opus-repository.org",
   "require": {
     "solarium/solarium": "3.8.*",
-    "opus4-repo/framework": "4.7.x-dev"
+    "opus4-repo/framework": "4.7.x-dev",
+    "zendframework/zendframework": "1.12.*"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.24"
