--- a/test/config.ini.template
+++ b/test/config.ini.template
@@ -66,13 +66,13 @@ bootstrap.class = "OpusTest\Bootstrap"
 appnamespace = "Application"
 
 ;SEARCH ENGINE SETTINGS
-searchengine.solr.default.adapterClass = Opus_Search_Solr_Solarium_Adapter
+searchengine.solr.default.adapterClass = Opus\Search\Solr\Solarium\Adapter
 
 searchengine.solr.default.service.default.endpoint.primary.host =
 searchengine.solr.default.service.default.endpoint.primary.port =
 searchengine.solr.default.service.default.endpoint.primary.path =
 searchengine.solr.default.service.default.endpoint.primary.timeout = 10
-searchengine.solr.default.service.default.xsltfile = APPLICATION_PATH "/tests/Opus/Search/Solr/solr.xslt"
+searchengine.solr.default.service.default.xsltfile = APPLICATION_PATH "/test/Solr/solr.xslt"
 searchengine.solr.default.service.default.marker = default
 
 searchengine.solr.default.service.index.endpoint.primary.port =
