--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,14 @@
   "require": {
     "solarium/solarium": "3.8.*",
     "opus4-repo/framework": "4.7.x-dev",
+    "opus4-repo/opus4-common": "4.7.x-dev",
     "zendframework/zendframework1": "1.12.*"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.24",
+    "phpunit/dbunit": "~1.3",
+    "phpunit/php-invoker": "~1.1",
+    "phpunit/phpunit-selenium": "1.4.2",
     "zendframework/zend-coding-standard": "~1.0.0"
   },
   "autoload": {
