--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
     "phpunit/dbunit": "~1.3",
     "phpunit/php-invoker": "~1.1",
     "phpunit/phpunit-selenium": "1.4.2",
-    "zendframework/zend-coding-standard": "~1.0.0"
+    "zendframework/zend-coding-standard": "~1.0.0",
+    "phpmd/phpmd": "@stable",
+    "phploc/phploc": "@stable"
   },
   "autoload": {
     "psr-4": {
@@ -42,6 +44,8 @@
     "test": "phpunit --colors=always",
     "test-coverage": "phpunit --colors=always --coverage-clover build/clover.xml",
     "cs-check": "phpcs -n",
-    "cs-fix": "phpcbf"
+    "cs-fix": "phpcbf",
+    "phpmd": "phpmd src xml cleancode,unusedcode,design,naming --reportfile build/phpmd.xml",
+    "phploc": "phploc --log-csv build/phploc.csv src"
   }
 }
