--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script: composer install
 script:
   - java -version
   - mysql --version
-  - ant --version
+  - ant -version
   - travis_fold start "prepare_dependencies"
   - ant prepare-workspace
   - ant prepare-config -DdbAdminName=root
@@ -39,6 +39,5 @@ script:
   - ./bin/solr restart
   - cd ..
   - travis_fold end "prepare_dependencies"
-  - ant lint
   - composer cs-check
   - ./vendor/bin/phpunit --configuration ./phpunit.xml --no-coverage
