OPUSVIER-3871 Fixed setting up configuration.

--- a/test/config.ini.template
+++ b/test/config.ini.template
@@ -40,13 +40,13 @@ theme = foobar
 ;DB SETTINGS
 ; db.params.host = "127.0.0.1"
 ; db.params.port = "3306"
-db.params.username =
-db.params.password =
-db.params.dbname =
+db.params.username = @db.user.name@
+db.params.password = @db.user.password@
+db.params.dbname = @db.name@
 db.debug = 1
 
-opusdb.params.admin.name =
-opusdb.params.admin.password =
+opusdb.params.admin.name = @db.admin.name@
+opusdb.params.admin.password = @db.admin.password@
 
 ;OPUS SETTINGS
 workspacePath = APPLICATION_PATH "/build/workspace"
@@ -68,20 +68,20 @@ appnamespace = "Application"
 ;SEARCH ENGINE SETTINGS
 searchengine.solr.default.adapterClass = Opus\Search\Solr\Solarium\Adapter
 
-searchengine.solr.default.service.default.endpoint.primary.host =
-searchengine.solr.default.service.default.endpoint.primary.port =
-searchengine.solr.default.service.default.endpoint.primary.path =
+searchengine.solr.default.service.default.endpoint.primary.host = @searchengine.index.host@
+searchengine.solr.default.service.default.endpoint.primary.port = @searchengine.index.port@
+searchengine.solr.default.service.default.endpoint.primary.path = @searchengine.index.app@
 searchengine.solr.default.service.default.endpoint.primary.timeout = 10
 searchengine.solr.default.service.default.xsltfile = APPLICATION_PATH "/test/Solr/solr.xslt"
 searchengine.solr.default.service.default.marker = default
 
-searchengine.solr.default.service.index.endpoint.primary.port =
-searchengine.solr.default.service.index.endpoint.primary.path =
+searchengine.solr.default.service.index.endpoint.primary.port = @searchengine.index.port@
+searchengine.solr.default.service.index.endpoint.primary.path = @searchengine.index.app@
 searchengine.solr.default.service.index.marker = index
 
-searchengine.solr.default.service.search.endpoint.primary.host =
-searchengine.solr.default.service.search.endpoint.primary.port =
-searchengine.solr.default.service.search.endpoint.primary.path =
+searchengine.solr.default.service.search.endpoint.primary.host = @searchengine.index.host@
+searchengine.solr.default.service.search.endpoint.primary.port = @searchengine.index.port@
+searchengine.solr.default.service.search.endpoint.primary.path = @searchengine.index.app@
 searchengine.solr.default.service.search.marker = search
 
 searchengine.solr.default.service.extract.marker = extract
@@ -107,13 +107,13 @@ searchengine.solr.default.query.onedoc.query = "*:*"
 searchengine.solr.default.query.onedoc.rows = 1
 
 ;SEARCH ENGINE SETTINGS (deprecated)
-searchengine.index.host =
-searchengine.index.port =
-searchengine.index.app =
+searchengine.index.host = @searchengine.index.host@
+searchengine.index.port = @searchengine.index.port@
+searchengine.index.app = @searchengine.index.app@
 searchengine.index.timeout = 10
-searchengine.extract.host =
-searchengine.extract.port =
-searchengine.extract.app =
+searchengine.extract.host = @searchengine.index.host@
+searchengine.extract.port = @searchengine.index.port@
+searchengine.extract.app = @searchengine.index.app@
 searchengine.extract.timeout = 10
 searchengine.solr.facets = author_facet,year,doctype,language,has_fulltext,belongs_to_bibliography,subject,project,institute
 searchengine.solr.xsltfile = APPLICATION_PATH "/tests/resources/solr.xslt"
