--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "ext-iconv": "*",
     "ext-simplexml": "*",
     "solarium/solarium": "3.8.*",
-    "opus4-repo/framework": "4.7.x-dev",
+    "opus4-repo/framework": "dev-OPUSVIER-3860",
     "opus4-repo/opus4-common": "dev-master",
     "zendframework/zendframework1": "1.12.*"
   },
