--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,8 @@
     "ext-iconv": "*",
     "ext-simplexml": "*",
     "solarium/solarium": "3.8.*",
-    "opus4-repo/framework": "dev-master",
-    "opus4-repo/opus4-common": "dev-master",
+    "opus4-repo/framework": "4.7-RC",
+    "opus4-repo/opus4-common": "4.7-RC",
     "zendframework/zendframework1": "1.12.*"
   },
   "require-dev": {
