OPUSVIER-449 Added configurable year(_inverted).

--- a/test/config.ini.template
+++ b/test/config.ini.template
@@ -118,6 +118,8 @@ searchengine.solr.facets = author_facet,year,doctype,language,has_fulltext,belon
 
 search.facet.year.indexField = 'published_year'
 
+search.index.field.year.order = 'PublishedDate,PublishedYear'
+
 ;LOGGING RELATED SETTINGS
 ; if set to true all xml that is generated while indexing is prepared for logging
 log.prepare.xml = false
