--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "phpunit/dbunit": "~1.3",
     "phpunit/php-invoker": "~1.1",
     "phpunit/phpunit-selenium": "1.4.2",
-    "zendframework/zend-coding-standard": "~1.0.0",
+    "laminas/laminas-coding-standard": "1.0.0",
     "phpmd/phpmd": "@stable",
     "phploc/phploc": "@stable",
     "sebastian/phpcpd": "*"
