--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "solarium/solarium": "3.8.*",
     "opus4-repo/framework": "dev-master",
     "opus4-repo/opus4-common": "dev-master",
-    "zendframework/zendframework1": "1.12.*"
+    "zendframework/zendframework1": "1.12.*",
+    "symfony/console": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.24",
