--- a/composer.json
+++ b/composer.json
@@ -47,7 +47,7 @@
     "check": [
       "Composer\\Config::disableProcessTimeout",
       "@prepare",
-      "@cs-check-report",
+      "@cs-check",
       "@test"
     ],
     "check-full": [
@@ -65,7 +65,7 @@
     ],
     "test-coverage": "phpunit --log-junit build/phpunit.xml --colors=always --coverage-html build/ --coverage-clover build/clover.xml",
     "cs-check": "phpcs -n",
-    "cs-check-report": "phpcs -h -n --report=checkstyle --report-file=build/checkstyle.xml",
+    "cs-check-report": "phpcs -n --report=checkstyle --report-file=build/checkstyle.xml",
     "cs-fix": "phpcbf",
     "phpmd": "phpmd src xml cleancode,unusedcode,design,naming --reportfile build/phpmd.xml --ignore-violations-on-exit",
     "phploc": "phploc --log-csv build/phploc.csv src",
