--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "ext-iconv": "*",
     "ext-simplexml": "*",
     "solarium/solarium": "3.8.*",
-    "opus4-repo/framework": "4.7",
+    "opus4-repo/framework": "4.7.0.*",
     "opus4-repo/opus4-common": "4.7",
     "zendframework/zendframework1": "1.12.*"
   },
