--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "4.8.24",
+    "phpunit/php-timer": "1.0.9",
     "phpunit/dbunit": "~1.3",
     "phpunit/php-invoker": "~1.1",
     "phpunit/phpunit-selenium": "1.4.2",
