--- a/test/config.ini.template
+++ b/test/config.ini.template
@@ -132,6 +132,8 @@ model.plugins.document[] = 'Opus\Document\Plugin\XmlCache'
 model.plugins.document[] = 'Opus\Document\Plugin\IdentifierUrn'
 model.plugins.document[] = 'Opus\Document\Plugin\IdentifierDoi'
 
+documentFinderClass = 'Opus\DocumentFinder\DefaultDocumentFinder'
+
 [testing : production]
 sql.schema.path =
 
