--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     "ext-simplexml": "*",
     "ext-mbstring": "*",
     "solarium/solarium": "3.8.*",
-    "opus4-repo/framework": "dev-master",
-    "opus4-repo/opus4-common": "dev-master",
+    "opus4-repo/framework": "^4.7.1",
+    "opus4-repo/opus4-common": "^4.7.1",
     "zendframework/zendframework1": "1.12.*",
     "symfony/console": "*"
   },
