OPUS4/opus4-common#51 Switch to Common namespace #32 Coding style fixes

--- a/composer.json
+++ b/composer.json
@@ -9,15 +9,15 @@
   ],
   "homepage": "http://www.opus-repository.org",
   "require": {
-    "php": ">=5.6",
+    "php": ">=7.1",
     "ext-xsl": "*",
     "ext-dom": "*",
     "ext-iconv": "*",
     "ext-simplexml": "*",
     "ext-mbstring": "*",
     "solarium/solarium": "3.8.*",
-    "opus4-repo/framework": "dev-master",
-    "opus4-repo/opus4-common": "dev-master",
+    "opus4-repo/framework": "dev-commonNamespace",
+    "opus4-repo/opus4-common": "dev-commonNamespace",
     "zendframework/zendframework1": "1.12.*",
     "symfony/console": "*"
   },
@@ -68,7 +68,7 @@
     "test-coverage": "phpunit --log-junit build/phpunit.xml --colors=always --coverage-html build/ --coverage-clover build/clover.xml",
     "cs-check": "phpcs -n",
     "cs-check-report": "phpcs -n --report=checkstyle --report-file=build/checkstyle.xml",
-    "cs-fix": "phpcbf",
+    "cs-fix": "phpcbf -v",
     "phpmd": "phpmd src xml cleancode,unusedcode,design,naming --reportfile build/phpmd.xml --ignore-violations-on-exit",
     "phploc": "phploc --log-csv build/phploc.csv src",
     "phpcpd": "phpcpd . --min-lines 3 --min-tokens 30 --log-pmd build/pmd-cpd.xml --progress || true",
