--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "phpunit/dbunit": "~1.3",
     "phpunit/php-invoker": "~1.1",
     "phpunit/phpunit-selenium": "1.4.2",
-    "laminas/laminas-coding-standard": "1.0.0",
+    "laminas/laminas-coding-standard": "<2.3",
     "phpmd/phpmd": "@stable",
     "phploc/phploc": "@stable",
     "sebastian/phpcpd": "*",
