--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "ext-simplexml": "*",
     "ext-mbstring": "*",
     "solarium/solarium": "3.8.*",
-    "opus4-repo/framework": "dev-master",
+    "opus4-repo/framework": "dev-issue253",
     "opus4-repo/opus4-common": "dev-master",
     "zendframework/zendframework1": "1.12.*",
     "symfony/console": "*"
