#47 Configrure modelFactory for tests

--- a/test/config.ini.template
+++ b/test/config.ini.template
@@ -105,6 +105,8 @@ search.facet.year.indexField = 'published_year'
 
 search.index.field.year.order = 'PublishedDate,PublishedYear'
 
+modelFactory = 'Opus\ModelFactory'
+
 ;LOGGING RELATED SETTINGS
 ; if set to true all xml that is generated while indexing is prepared for logging
 log.prepare.xml = false
