#98 Solarium 6 API changes Removing deprecated config options

--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
   ],
   "homepage": "http://www.opus-repository.org",
   "require": {
-    "php": ">=7.1",
+    "php": ">=8",
     "ext-xsl": "*",
     "ext-dom": "*",
     "ext-iconv": "*",
     "ext-simplexml": "*",
     "ext-mbstring": "*",
-    "solarium/solarium": "3.8.*",
+    "solarium/solarium": "6.*",
+    "symfony/event-dispatcher": "*",
     "opus4-repo/framework": "dev-4.7.2-zf1f",
     "opus4-repo/opus4-common": "dev-4.7.2-zf1f",
     "opus4-repo/opus4-job": "dev-4.7.2-zf1f",
