--- a/build.xml
+++ b/build.xml
@@ -12,15 +12,10 @@
     <property name="dbUserPassword" value="" />
     <property name="dbAdminName" value="opus4admin" />
     <property name="dbAdminPassword" value="" />
-    <property name="solrDefaultHost" value="localhost" />
-    <property name="solrDefaultPort" value="8983" />
-    <property name="solrDefaultPath" value="/solr/opus4" />
     <property name="solrIndexHost" value="localhost" />
     <property name="solrIndexPort" value="8983" />
-    <property name="solrIndexPath" value="/solr/opus4" />
-    <property name="solrExtractHost" value="localhost" />
-    <property name="solrExtractPort" value="8983" />
-    <property name="solrExtractPath" value="/solr/opus4" />
+    <property name="solrIndexPath" value="/" />
+    <property name="solrIndexCore" value="opus4" />
 
     <target name="clean">
         <delete dir="${basedir}/build/logs" />
@@ -55,15 +50,10 @@
                 <filter token="db.admin.name" value="${dbAdminName}" />
                 <filter token="db.admin.password" value="${dbAdminPassword}" />
                 <filter token="db.name" value="${dbName}" />
-                <filter token="searchengine.default.host" value="${solrDefaultHost}" />
-                <filter token="searchengine.default.port" value="${solrDefaultPort}" />
-                <filter token="searchengine.default.path" value="${solrDefaultPath}" />
                 <filter token="searchengine.index.host" value="${solrIndexHost}" />
                 <filter token="searchengine.index.port" value="${solrIndexPort}" />
-                <filter token="searchengine.index.app" value="${solrIndexPath}" />
-                <filter token="searchengine.extract.host" value="${solrExtractHost}" />
-                <filter token="searchengine.extract.port" value="${solrExtractPort}" />
-                <filter token="searchengine.extract.app" value="${solrExtractPath}" />
+                <filter token="searchengine.index.path" value="${solrIndexPath}" />
+                <filter token="searchengine.index.core" value="${solrIndexCore}" />
             </filterset>
         </copy>
     </target>
