--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
     "ext-mbstring": "*",
     "solarium/solarium": "6.*",
     "symfony/event-dispatcher": "*",
-    "opus4-repo/framework": "dev-4.7.2-zf1f",
-    "opus4-repo/opus4-common": "dev-4.7.2-zf1f",
-    "opus4-repo/opus4-job": "dev-4.7.2-zf1f",
-    "shardj/zf1-future": "1.21.*",
+    "opus4-repo/framework": "4.7.2.*",
+    "opus4-repo/opus4-common": "4.7.2.*",
+    "opus4-repo/opus4-job": "dev-main",
+    "opus4/zf1-future": "1.21.*",
     "symfony/console": "*"
   },
   "require-dev": {
