--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,15 @@
     "ext-simplexml": "*",
     "ext-mbstring": "*",
     "solarium/solarium": "3.8.*",
-    "opus4-repo/framework": "dev-4.7.2-zf1f",
-    "opus4-repo/opus4-common": "dev-4.7.2-zf1f",
-    "opus4-repo/opus4-job": "dev-4.7.2-zf1f",
-    "shardj/zf1-future": "1.21.*",
+    "opus4-repo/framework": "4.7.2.*",
+    "opus4-repo/opus4-common": "4.7.2.*",
+    "opus4-repo/opus4-job": "dev-main",
+    "opus4/zf1-future": "1.21.*",
     "symfony/console": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "6.*",
-    "laminas/laminas-coding-standard": "<2.3",
+    "opus4-repo/codesniffer": "dev-laminas",
     "phpmd/phpmd": "@stable",
     "phploc/phploc": "@stable",
     "sebastian/phpcpd": "*",
