#96 Remove code dependency on Cache class

--- a/test/test.ini
+++ b/test/test.ini
@@ -77,7 +77,8 @@ search.facet.year.indexField = 'published_year'
 search.index.field.year.order = 'PublishedDate,PublishedYear'
 
 modelFactory = 'Opus\ModelFactory'
-model.fieldDescriptorClass = "Opus\Db\Model\DbFieldDescriptor"
+model.fieldDescriptorClass = 'Opus\Db\Model\DbFieldDescriptor'
+documentXmlCacheClass = 'Opus\Model\Xml\Cache'
 
 ;LOGGING RELATED SETTINGS
 ; if set to true all xml that is generated while indexing is prepared for logging
