--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "symfony/event-dispatcher": "*",
     "opus4-repo/framework": "^4.8",
     "opus4-repo/opus4-common": "^4.8",
-    "opus4-repo/opus4-job": "^4.8",
+    "opus4-repo/opus4-job": "4.8.1.x-dev",
     "opus4/zf1-future": "1.21.*",
     "symfony/console": "*"
   },
