#114 Use the faster download server when downloading the most recent Solr release
(cherry picked from commit f54d42a6f5197047241607a6b8483e77ba5522d2)

--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project name="opus4search">
 
     <property environment="env" />
-    <property name="solrVersion" value="7.7.1" />
+    <property name="solrVersion" value="9.4.0" />
     <property name="downloadDir" value="${basedir}/downloads" />
 
     <!-- Properties for configuration files (tests/config.ini) used for testing. -->
@@ -60,7 +60,7 @@
 
     <target name="download-solr">
         <mkdir dir="${downloadDir}" />
-        <get src="https://archive.apache.org/dist/lucene/solr/${solrVersion}/solr-${solrVersion}.tgz"
+        <get src="https://www.apache.org/dyn/closer.lua/solr/solr/${solrVersion}/solr-${solrVersion}.tgz?action=download"
              dest="${downloadDir}/solr-${solrVersion}.tgz"
              skipexisting="true" />
         <exec executable="tar" dir="${downloadDir}">
