--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -16,17 +16,17 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ['8.1']
+        versions: [{php: '8.1', solr: '9.4.0'}]
 
-    name: PHP ${{ matrix.php-versions }} Test
+    name: PHP ${{ matrix.versions.php }} Test
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Setup PHP ${{ matrix.php-versions }}
+      - name: Setup PHP ${{ matrix.versions.php }}
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-versions }}
+          php-version: ${{ matrix.versions.php }}
 
       - name: Check PHP Version
         run: php -v
@@ -34,8 +34,19 @@ jobs:
       - name: Install Composer and Dependencies
         run: sudo apt-get update && curl -s http://getcomposer.org/installer | php && php composer.phar self-update && php composer.phar install
 
-      - name: Solr
-        run: sudo bash bin/install_solr_docker.sh
+      - name: Get Solr ${{ matrix.versions.solr }} from cache
+        id: cache-solr
+        uses: actions/cache@v3
+        with:
+          path: solr-${{ matrix.versions.solr }}.tgz
+          key: solr-${{ matrix.versions.solr }}.tgz
+
+      - name: Download Solr ${{ matrix.versions.solr }}
+        if: steps.cache-solr.outputs.cache-hit != 'true'
+        run: sudo bash bin/download_solr_docker.sh --version ${{ matrix.versions.solr }}
+
+      - name: Install Solr ${{ matrix.versions.solr }}
+        run: sudo bash bin/install_solr_docker.sh --version ${{ matrix.versions.solr }}
 
       - name: Start MySQL
         run: sudo systemctl start mysql.service
