--- a/composer.json
+++ b/composer.json
@@ -17,14 +17,14 @@
     "ext-mbstring": "*",
     "solarium/solarium": "6.*",
     "symfony/event-dispatcher": "*",
-    "opus4-repo/framework": "^4.8",
-    "opus4-repo/opus4-common": "^4.8",
+    "opus4-repo/framework": "dev-master as 4.8.1",
+    "opus4-repo/opus4-common": "dev-master as 4.8.1",
     "opus4-repo/opus4-job": "dev-main as 4.8.1",
     "opus4/zf1-future": "1.21.*",
     "symfony/console": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "<9",
+    "phpunit/phpunit": "10.*",
     "opus4-repo/codesniffer": "dev-laminas",
     "phpmd/phpmd": "@stable",
     "phploc/phploc": "@stable",
